projeto-blog/Projeto-blog/back-end/liblog/src/main/java/com/example/liblog/error/exception/NotExistUserException.java
package com.example.liblog.error.exception;

public class NotExistUserException extends RuntimeException{
    public NotExistUserException(String message) {
        super(message);
    }
}
